# barry-dylan

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
config/: .barry.toml.example  barry.toml.example
docs/superpowers/plans/: 2026-05-12-barry-bot-v1.md  2026-05-13-multi-reviewer.md  2026-05-16-periodic-status.md
docs/superpowers/specs/: 2026-05-12-barry-bot-design.md  2026-05-13-multi-reviewer-design.md  2026-05-14-actor-pattern-refactor-design.md  2026-05-16-periodic-status-design.md
src/: app_runtime.rs  lib.rs  main.rs
src/checker/: mod.rs
src/checker/hygiene/: autolabel.rs  description.rs  mod.rs  size.rs  title.rs
src/checker/llm_review/: mod.rs  parse.rs  prompt.rs
src/checker/multi_review/: clients.rs  confer.rs  identity.rs  judge.rs  mod.rs  orchestrator.rs  parse_util.rs  persona.rs  posting.rs  review.rs  synthesis.rs
src/config/: mod.rs  repo.rs
src/dispatcher/: cancel.rs  debounce.rs  mod.rs  run.rs  trust.rs  worker.rs
src/github/: app.rs  check_run.rs  client.rs  mod.rs  pr.rs
src/llm/: anthropic.rs  factory.rs  mod.rs  openai.rs
src/storage/: actor.rs  audit.rs  cache.rs  mod.rs  multi_review.rs  queue.rs  schema.sql  tokens.rs
src/telemetry/: mod.rs  status.rs
src/webhook/: event.rs  mod.rs  server.rs  verify.rs
tests/fixtures/: test_app_key.pem
tests/integration/: cancel.rs  failure_isolation.rs  happy_path.rs  main.rs  merged_pr.rs  multi_review_agreement.rs  multi_review_confer.rs  multi_review_disagreement.rs  rerun.rs  trust_gate.rs
tests/integration/common/: mod.rs
(+6 files in other folders)
