[package]
name = "barry-bot"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "barry-bot"
path = "src/main.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
axum = { version = "0.8", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false }
async-trait = "0.1"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"
subtle = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "time"] }
time = { version = "0.3", features = ["serde", "macros"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
globset = "0.4"
url = "2"
futures = "0.3"
once_cell = "1"
base64 = "0.22"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
pretty_assertions = "1"
tokio-test = "0.4"

[profile.release]
lto = "thin"
codegen-units = 1

[[test]]
name = "integration"
path = "tests/integration/main.rs"
